[gd_scene load_steps=10 format=2]

[ext_resource path="res://Source/Menu/VMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Main/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=5]
[ext_resource path="res://Source/Gameplay/HUD/StartGameMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Gameplay/HUD/OptionsMenu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Menu" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
script = ExtResource( 3 )

[node name="Play" parent="." index="0" instance=ExtResource( 2 )]
text = "Play"
flat = true

[node name="Options" parent="." index="1" instance=ExtResource( 2 )]
margin_top = 80.0
margin_bottom = 140.0
text = "Options"
flat = true

[node name="Quit" parent="." index="2" instance=ExtResource( 2 )]
margin_top = 160.0
margin_bottom = 220.0
text = "Quit"
flat = true

[node name="Overlay" type="CanvasLayer" parent="." index="3"]

[node name="QuitConfirm" type="ColorRect" parent="Overlay" index="0"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="ColorRect" type="TextureRect" parent="Overlay/QuitConfirm" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -140.0
margin_right = 210.0
margin_bottom = 189.0
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Overlay/QuitConfirm/ColorRect" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VMenu" parent="Overlay/QuitConfirm/ColorRect/MarginContainer" index="0" instance=ExtResource( 1 )]
margin_right = 420.0
margin_bottom = 329.0

[node name="MarginTop" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="0"]
margin_right = 420.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="1"]
margin_top = 25.0
margin_right = 420.0
margin_bottom = 88.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Quit Game?"
align = 1
valign = 1
autowrap = true

[node name="MarginMid1" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="2"]
margin_top = 108.0
margin_right = 420.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="quit_confirm" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="3" instance=ExtResource( 2 )]
margin_top = 133.0
margin_right = 420.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "Yes"
flat = true

[node name="MarginMid2" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="4"]
margin_top = 216.0
margin_right = 420.0
margin_bottom = 221.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="quit_cancel" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="5" instance=ExtResource( 2 )]
margin_top = 241.0
margin_right = 420.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "No"
flat = true

[node name="MarginBottom" type="ColorRect" parent="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu" index="6"]
margin_top = 324.0
margin_right = 420.0
margin_bottom = 329.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="StartGameOverlay" type="ColorRect" parent="Overlay" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameMenu" parent="Overlay/StartGameOverlay" index="0" instance=ExtResource( 6 )]

[node name="OptionsOverlay" type="ColorRect" parent="Overlay" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="Overlay/OptionsOverlay" index="0" instance=ExtResource( 7 )]

[connection signal="pressed" from="Play" to="." method="play"]
[connection signal="pressed" from="Options" to="." method="options"]
[connection signal="pressed" from="Quit" to="." method="quit"]
[connection signal="pressed" from="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu/quit_confirm" to="." method="quit_confirm"]
[connection signal="pressed" from="Overlay/QuitConfirm/ColorRect/MarginContainer/VMenu/quit_cancel" to="." method="quit_cancel"]
[connection signal="options_saved" from="Overlay/OptionsOverlay/OptionsMenu" to="." method="_on_OptionsMenu_options_saved"]
